tests/baselines/reference/typeArgumentInferenceTransitiveConstraints.errors.txt
==== tests/cases/conformance/expressions/functionCalls/typeArgumentInferenceTransitiveConstraints.ts (3 errors) ====
    
    function fn<A extends Date, B extends A, C extends B>(a: A, b: B, c: C) {
                                ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                             ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        return [a, b, c];
    }
    
    var d = fn(new Date(), new Date(), new Date());
    var d: Date[]; // Should be OK (d should be Date[])
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'd' must be of type '{}[]', but here has type 'Date[]'.
    